{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "c2844e70-881c-6c46-d629-267733a2432c",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "terra-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/publicIPAddresses/terra-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.99.72",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "terra-ip",
            "resource_group_name": "terra-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "terra-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/networkInterfaces/terra-nic",
            "internal_domain_name_suffix": "t03lbj2tbnpexiv3ymetvfankb.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/publicIPAddresses/terra-ip",
                "subnet_id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network/subnets/terra-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-34-86-9A",
            "name": "terra-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "terra-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Compute/virtualMachines/terra-vm"
          },
          "dependencies": [
            "azurerm_public_ip.terra-ip",
            "azurerm_resource_group.terra-rg",
            "azurerm_subnet.terra-subnet",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "terra-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/networkSecurityGroups/terra-sg",
            "location": "eastus",
            "name": "terra-sg",
            "resource_group_name": "terra-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "terra-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "terra-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/networkSecurityGroups/terra-sg/securityRules/terra-dev-rule",
            "name": "terra-dev-rule",
            "network_security_group_name": "terra-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "terra-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.terra-sg",
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terra-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/publicIPAddresses/terra-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.87.99.72",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "terra-ip",
            "resource_group_name": "terra-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terra-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.123.1.0/24",
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network/subnets/terra-subnet",
            "name": "terra-subnet",
            "resource_group_name": "terra-resources",
            "virtual_network_name": "terra-network"
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "terra-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network/subnets/terra-subnet",
            "network_security_group_id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/networkSecurityGroups/terra-sg",
            "subnet_id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network/subnets/terra-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.terra-sg",
            "azurerm_resource_group.terra-rg",
            "azurerm_subnet.terra-subnet",
            "azurerm_virtual_network.terra-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terra-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "a7b0ba9e-0b93-4b5e-a2bd-c3093a940d51",
            "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network",
            "location": "eastus",
            "name": "terra-network",
            "resource_group_name": "terra-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/virtualNetworks/terra-network/subnets/terra-subnet",
                "name": "terra-subnet",
                "security_group": "/subscriptions/7fd49120-a893-40f3-89d8-7af2d0e1f19a/resourceGroups/terra-resources/providers/Microsoft.Network/networkSecurityGroups/terra-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.terra-rg"
          ]
        }
      ]
    }
  ]
}